# h-data-type-a-la-carte

./: CHANGELOG.md  h-data-type-a-la-carte.cabal
src/: Expr.hs  ExprFix.hs
